--- a/src/app/health-record/health-record-details/health-record-details.html
+++ b/src/app/health-record/health-record-details/health-record-details.html
@@ -1,7 +1,7 @@
 <div class="details-container">
   <mat-card *ngIf="healthRecord" class="livestock-card">
     <mat-card-header>
-      <mat-card-title>Livestock Details</mat-card-title>
+      <mat-card-title>Health Record Details</mat-card-title>
       <mat-card-actions align="end">
         <button
           mat-raised-button color="primary"
