--- a/src/app/dashboard/dashboard-admin/dashboard-admin.html
+++ b/src/app/dashboard/dashboard-admin/dashboard-admin.html
@@ -1,5 +1,5 @@
 <header class="toolbar mat-elevation-z4">
-  <span class="toolbar-title">Livestock Health Dashboard - Occidental Mindoro</span>
+  <span class="toolbar-title">Livestock Watch Dashboard - Occidental Mindoro</span>
 </header>
 
 <main class="dashboard-container">
