--- a/src/app/livestock/livestock-form/livestock-form.html
+++ b/src/app/livestock/livestock-form/livestock-form.html
@@ -77,7 +77,7 @@
           </mat-form-field>
 
           <mat-form-field appearance="outline" class="third-width">
-            <mat-label>Age</mat-label>
+            <mat-label>Age (by Months)</mat-label>
             <input matInput formControlName="age" type="number" min="0" />
             <mat-error *ngIf="age.hasError('required')">
               Age is required.
