dashboard and claim pending on rejected fix

--- a/src/app/user-settings/user-settings-index/user-settings-index.html
+++ b/src/app/user-settings/user-settings-index/user-settings-index.html
@@ -111,7 +111,7 @@
     </div>
   </mat-card>
 
-  <a class="return-dashboard" [routerLink]="'/dashboard/' + user.role">
+  <a class="return-dashboard"    [routerLink]="['/dashboard', (user.role === 'vet' ? 'veterinarian' : user.role)]">
     <mat-icon>arrow_back</mat-icon> Return to Dashboard
   </a>
 </div>
