--- a/src/app/health-record/health-record-list/health-record-list.html
+++ b/src/app/health-record/health-record-list/health-record-list.html
@@ -4,7 +4,7 @@
   [canCreate]="canCreate"
   [displayedColumns]="displayedColumnsKeys"
   [columnDefs]="columnDefs"
-  [dataSource]="dataSource"
+  [data]="dataSource.data"
   [isLoading]="isLoading"
   (create)="onCreate()"
   (details)="onDetails($event)"
