--- a/src/app/livestock-breed/livestock-breed-list/livestock-breed-list.html
+++ b/src/app/livestock-breed/livestock-breed-list/livestock-breed-list.html
@@ -3,7 +3,7 @@
   [createButtonLabel]="'Create Livestock Breed'"
   [displayedColumns]="displayedColumns"
   [columnDefs]="columnDefs"
-  [dataSource]="dataSource"
+  [data]="dataSource.data"
   [isLoading]="isLoading"
   (create)="onCreate()"
   (details)="onDetails($event)"
