--- a/src/app/livestock-group/livestock-group-list/livestock-group-list.html
+++ b/src/app/livestock-group/livestock-group-list/livestock-group-list.html
@@ -5,7 +5,7 @@
   (create)="onCreate()"
   [displayedColumns]="displayedColumns"
   [columnDefs]="columnDefs"
-  [dataSource]="dataSource" 
+  [data]="dataSource.data" 
   [isLoading]="isLoading"
   (details)="onDetails($event)"
   (update)="onUpdate($event)"
