--- a/src/app/_shared/component/table/generic-table.component.html
+++ b/src/app/_shared/component/table/generic-table.component.html
@@ -1,79 +1,124 @@
 <div class="page-container">
 
-  @if (createButtonLabel && create) {
-    <div class="actions" *ngIf="createButtonLabel">
-      <button
-        mat-raised-button
-        (click)="onCreateClick()"
-        [disabled]="isCreateDisabled()"
-      >
+  <!-- HEADER BAR -->
+  <div class="header-bar">
+    <h2 class="page-title">{{ title }}</h2>
+
+    <div class="right">
+      <!-- SEARCH -->
+      <div class="search-wrapper">
+        <mat-form-field appearance="outline" class="search-field">
+          <mat-icon matPrefix>search</mat-icon>
+          <input matInput placeholder="Search..." (keyup)="applyFilter($event)">
+        </mat-form-field>
+      </div>
+
+      <!-- CREATE BUTTON -->
+      <button *ngIf="create && createButtonLabel"
+              mat-flat-button
+              color="primary"
+              class="create-btn"
+              (click)="onCreateClick()"
+              [disabled]="isCreateDisabled()">
+        <mat-icon>add</mat-icon>
         {{ createButtonLabel }}
       </button>
     </div>
-  }
-  <mat-form-field appearance="fill">
-    <mat-label>Search</mat-label>
-    <input matInput (keyup)="applyFilter($event)" placeholder="Type to search">
-    <mat-icon matSuffix>search</mat-icon>
-  </mat-form-field>
-  <div class="user-table-container">
-    <table mat-table [dataSource]="dataSource" class="mat-elevation-z8 custom-table" matSort (matSortChange)="announceSortChange($event)">
+  </div>
 
-      <!-- Dynamic columns -->
-      @for (col of columnDefs; track col.key) {
-        <ng-container [matColumnDef]="col.key">
-          <th mat-header-cell *matHeaderCellDef mat-sort-header [attr.sortActionDescription]="'Sort by '+ col.key">{{ col.label }}</th>
-          <td mat-cell *matCellDef="let element">
-            @let cellValue = getCellValue(col, element);
-            @if (col.key === 'message' && (cellValue?.dataLink || element?.link)) {
-              <!-- enable data link -->
-              <a
-                [routerLink]="cellValue?.dataLink || element?.link"
-                class="message-link"
-              >
-                {{ cellValue?.display || cellValue || element?.message }}
-              </a>
-              <!-- <a [routerLink]="getCellValue(col, element).dataLink">{{ getCellValue(col, element).display }}</a> -->
-            } @else {
-         
-                {{ getCellValue(col, element) }}
-            }
+  <!-- DESKTOP TABLE -->
+  <div class="user-table-container desktop-table" [class.hidden]="isMobile">
+    <div class="table-wrapper">
+      <table mat-table
+            [dataSource]="dataSource"
+            class="mat-elevation-z4 modern-table"
+            matSort
+            (matSortChange)="announceSortChange($event)">
+        <!-- Dynamic Columns & Actions Column -->
+        <ng-container *ngFor="let col of columnDefs" [matColumnDef]="col.key">
+          <th mat-header-cell *matHeaderCellDef mat-sort-header> {{ col.label }} </th>
+          <td mat-cell *matCellDef="let element" [attr.data-label]="col.label">
+            {{ getCellValue(col, element) }}
           </td>
         </ng-container>
-      }
 
-      <!-- Actions Column -->
-      <ng-container matColumnDef="actions">
-        <th mat-header-cell *matHeaderCellDef> Actions </th>
-        <td mat-cell *matCellDef="let element">
-          <ng-container *ngIf="actionsTemplate; else defaultActions">
-            <ng-container *ngTemplateOutlet="actionsTemplate; context: { $implicit: element }"></ng-container>
+        <ng-container matColumnDef="actions">
+          <th mat-header-cell *matHeaderCellDef class="actions-header">Actions</th>
+          <td mat-cell *matCellDef="let element" data-label="Actions">
+            <ng-container *ngIf="actionsTemplate; else defaultDesktopActions">
+              <ng-container *ngTemplateOutlet="actionsTemplate; context: { $implicit: element }"></ng-container>
+            </ng-container>
+
+            <ng-template #defaultDesktopActions>
+              <button mat-icon-button color="primary" matTooltip="View" (click)="onDetailsClick(element)">
+                <mat-icon>visibility</mat-icon>
+              </button>
+              <button mat-icon-button color="accent" matTooltip="Edit" (click)="onUpdateClick(element)">
+                <mat-icon>edit</mat-icon>
+              </button>
+            </ng-template>
+          </td>
+        </ng-container>
+
+        <tr mat-header-row *matHeaderRowDef="displayedColumns" class="header-row"></tr>
+        <tr mat-row *matRowDef="let row; columns: displayedColumns;" class="data-row"></tr>
+      </table>
+
+      <!-- Loading inside table -->
+      <div class="table-loading-overlay" *ngIf="isLoading">
+        <mat-spinner diameter="50"></mat-spinner>
+      </div>
+    </div>
+  </div>
+
+
+  <!-- MOBILE CARDS -->
+  <div class="mobile-card-wrapper" *ngIf="isMobile">
+    <div class="mobile-card-container">
+      <div class="mobile-card" *ngFor="let row of mobilePagedData; let i = index">
+        <div class="mobile-card-header">
+          <span class="title">{{ columnDefs[0].label }}: {{ getCellValue(columnDefs[0], row) }}</span>
+        </div>
+
+        <div class="mobile-card-body">
+          <ng-container *ngFor="let col of columnDefs; let i = index">
+            <div class="row" *ngIf="i !== 0">
+              <span class="label">{{ col.label }}:</span>
+              <span class="value">{{ getCellValue(col, row) }}</span>
+            </div>
+          </ng-container>
+        </div>
+
+        <div class="mobile-card-actions">
+          <ng-container *ngIf="actionsTemplate; else defaultMobileActions">
+            <ng-container *ngTemplateOutlet="actionsTemplate; context: { $implicit: row }"></ng-container>
           </ng-container>
 
-          <ng-template #defaultActions>
-            <button mat-icon-button color="primary" (click)="onDetailsClick(element)">
+          <ng-template #defaultMobileActions>
+            <button mat-icon-button color="primary" matTooltip="View" (click)="onDetailsClick(row)">
               <mat-icon>visibility</mat-icon>
             </button>
-            <button mat-icon-button color="accent" (click)="onUpdateClick(element)">
+            <button mat-icon-button color="accent" matTooltip="Edit" (click)="onUpdateClick(row)">
               <mat-icon>edit</mat-icon>
             </button>
-            <!-- <button mat-icon-button color="accent" (click)="onMarkAsReadClick(element)">
-              <mat-icon>done_all</mat-icon>
-            </button> -->
           </ng-template>
-        </td>
-      </ng-container>
-
-      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
-      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
-    </table>
-
-    @if (isLoading) {
-      <div class="spinner-container">
-        <mat-spinner [diameter]="50"></mat-spinner>
+        </div>
       </div>
-    }
 
-    <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+      <!-- Loading overlay for mobile cards -->
+      <div class="table-loading-overlay" *ngIf="isLoading">
+        <mat-spinner diameter="50"></mat-spinner>
+      </div>
+    </div>
   </div>
+
+
+  <!-- NO DATA -->
+  <div *ngIf="dataSource.filteredData.length === 0 && !isLoading" class="no-data-common">
+    No records found.
+  </div>
+
+  <!-- PAGINATOR -->
+  <mat-paginator [pageSizeOptions]="[5, 10, 20]" showFirstLastButtons></mat-paginator>
+
 </div>
