--- a/src/app/claims/claims-list/claims-list.html
+++ b/src/app/claims/claims-list/claims-list.html
@@ -4,7 +4,7 @@
   [displayedColumns]="displayedColumnsKeys"
   [columnDefs]="columnDefs"
   [canCreate]="canCreate"
-  [dataSource]="dataSource"
+  [data]="dataSource.data"
   [isLoading]="isLoading"
   (create)="onCreate()"
   (details)="onDetails($event)"
